--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -7,3 +7,29 @@ WEB_URL=
 MONGO_URL=
 
 FRONTEND_URL=
+
+SMTP_PASS=
+
+SMTP_USER=
+
+SMTP_HOST=
+
+SMTP_PORT=
+
+SMTP_SERVICE=
+
+JWT_SECRET=
+
+JWT_EXPIRE=
+
+COOKIE_EXPIRE = 
+
+OTP_ATTEMPTS_EXPIRE = 
+
+OTP_EXPIRE = 
+
+MAX_LOGIN_ATTEMPTS = 
+
+LOGIN_OTP_EXPIRE = 
+
+MAX_LOGIN_ATTEMPTS_EXPIRE = 
