--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "lorem-ipsum": "^2.0.8",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
