--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "lorem-ipsum": "^2.0.8",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
