--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "razorpay": "^2.9.5",
     "validator": "^13.12.0"
   }
 }
