--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "lorem-ipsum": "^2.0.8",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
